[project]
name = "dsax"
version = "0.1.0"
description = "Add your description here"

authors = [{ name = "Prasad Raju G" }]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dsax"]

[project.optional-dependencies]
perf = [
    "matplotlib>=3.10.8",
]